--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@vitejs/plugin-vue": "^6.0.4",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
-    "eslint": "^10.0.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-oxlint": "~1.46.0",
-    "eslint-plugin-vue": "^10.2.0",
+    "eslint-plugin-vue": "~10.8.0",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.47.0",
