--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "pinia": "^3.0.4",
-    "vue": "^3.5.28"
+    "vue": "^3.5.28",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.4",
